@@ -11,10 +11,12 @@
 package org.eclipse.cdt.debug.internal.core.model;
 
 import org.eclipse.cdt.debug.core.CDebugCorePlugin;
+import org.eclipse.cdt.debug.core.ICDTLaunchConfigurationConstants;
 import org.eclipse.cdt.debug.core.ICDebugConstants;
 import org.eclipse.cdt.debug.core.cdi.model.ICDIRegister;
 import org.eclipse.cdt.debug.core.cdi.model.ICDIRegisterObject;
 import org.eclipse.cdt.debug.core.model.CVariableFormat;
+import org.eclipse.core.runtime.CoreException;
 import org.eclipse.debug.core.DebugException;
 import org.eclipse.debug.core.model.IRegister;
 import org.eclipse.debug.core.model.IRegisterGroup;
@@ -45,5 +47,18 @@ public class CRegister extends CGlobalVariable implements IRegister {
 	 */
 	public IRegisterGroup getRegisterGroup() throws DebugException {
 		return (IRegisterGroup)getParent();
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.internal.core.model.CVariable#isBookkeepingEnabled()
+	 */
+	protected boolean isBookkeepingEnabled() {
+		boolean result = false;
+		try {
+			result = getLaunch().getLaunchConfiguration().getAttribute( ICDTLaunchConfigurationConstants.ATTR_DEBUGGER_ENABLE_REGISTER_BOOKKEEPING, false );
+		}
+		catch( CoreException e ) {
+		}
+		return result;
 	}
 }
