@@ -93,10 +93,12 @@ CMainTab.Choose_program_to_run_from_NAME=Choose a program to run from {0}:
 CDebuggerTab.Attach_to_running_process=Attach to running process
 CDebuggerTab.Advanced_Options_Dialog_Title=Advanced Options
 CDebuggerTab.Stop_at_main_on_startup=Stop at main() on startup
-CDebuggerTab.Automatically_track_values_of_variables=Automatically track the values of variables.
+CDebuggerTab.Automatically_track_values_of=Automatically track the values of
 CDebuggerTab.Debugger_Options=Debugger Options
 CDebuggerTab.Mode_not_supported=Mode ''{0}'' is not supported by selected debugger
 CDebuggerTab.Advanced=Advanced...
+CDebuggerTab.Variables=Variables
+CDebuggerTab.Registers=Registers
 CDebuggerTab.No_debugger_available=No debugger available
 CDebuggerTab.CPU_is_not_supported=The CPU is not supported by selected debugger.
 
